Added Linear Color & Profile Pic

--- a/css/basic.css
+++ b/css/basic.css
@@ -9,7 +9,8 @@
         /*CSS Of Body Or Background*/
         body {
            
-            background: linear-gradient(90deg, rgb(132, 147, 159), rgba(0, 212, 255, 1));
+            background: rgb(2,0,36);
+            background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(58,58,189,1) 0%, rgba(0,212,255,1) 100%);
 
             height    : 100vh;
             height    : auto;
@@ -53,6 +54,7 @@
             padding: 70px 0;
             text-align: center;
             align-self: center;
+            border-radius: 13px;
             background-color: rgb(103, 166, 193);
             width: 350px;
             height: auto;
